--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">DidatiacApp</string>
-    <string name="title_activity_preguntas">preguntas</string>
+    <string name="app_name">Didacti_App</string>
+    <string name="title_activity_preguntas">Preguntas</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
 </resources>
